# appgrowing-cli

./: .gitignore  README.md  pyproject.toml  test_app_search.py  test_creative_insights_details.py
appgrowing_cli/: __init__.py  api_adapter.py  auth_store.py  cli.py  schema.py  utils.py
appgrowing_cli/schemas/: __init__.py  creative-summary.schema.json  monitor-run-request.schema.json  monitor-run-result.schema.json  trend-competitor-table.schema.json
samples/: monitor-request.json
schemas/: app-distribution.schema.json  app-material-insights.schema.json  app-search.schema.json  creative-rule-groups.schema.json  promote-ranking-compare.schema.json  promote-ranking-snapshot.schema.json  trend-ranking-compare.schema.json  trend-ranking-snapshot.schema.json
